<resources>
    <string translatable="false" name="app_name">Muvid</string>
    <string name="title_music">Music</string>
    <string name="title_video">Video</string>
    <string name="title_playlist">Playlist</string>
    <string name="default_playback_time" translatable="false">0:00</string>
    <string name="play_pause_btn">Play pause</string>
    <string name="skip_next_btn">Skip to next song</string>
    <string name="skip_prev_btn">Skip to previous song</string>
    <string name="repeat_btn">Repeat</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="default_song_name">Song name</string>
    <string name="default_artist_name">Artist name</string>
    <string name="music_artwork_background" translatable="false">Music artwork background</string>
    <string name="seekbar" translatable="false">Seekbar</string>
    <string name="more_features_btn" translatable="false">More music features</string>
    <string name="close">Close</string>
    <string name="now_playing">Now playing</string>
    <string name="default_album_art" translatable="false">Default album art</string>
    <string name="playback">Playback</string>
    <string name="notification_channel_name" translatable="false">Background music playback</string>
    <string name="notification_channel_description" translatable="false">Display and control music playback when running in background</string>
    <string name="music_artwork" translatable="false">Music artwork</string>
    <string name="playlist" translatable="false">Playlist</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="listen_later">Listen later</string>
    <string name="audio_visualizer_permission_rationale_title">Audio recording permission needed</string>
    <string name="audio_visualizer_permission_rationale_message">This app needs to record audio to render the music visualization. The audio won\'t actually be saved.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="disable_music_visual">Disable music visual</string>
    <string name="audio_visualizer_permission_denied_notice_title">Audio visualizer disabled</string>
    <string name="audio_visualizer_permission_denied_notice_message">Audio visualizer disabled because audio recording permission is denied</string>
    <string name="action_search">Search</string>
    <string name="details">Details</string>
    <string name="switch_view" translatable="false">Switch View</string>
    <string name="open_song_item_context_menu" translatable="false">Open song item context menu</string>
    <string name="show_as">Show as</string>
    <string name="artist_artwork" translatable="false">Artist artwork</string>
    <string name="small_artist_artwork" translatable="false">Small artist artwork</string>
    <string name="play_all_songs_from_this_artist">Play all songs from this artist</string>
    <string name="default_artist_details_description">This artist has 0 song(s) and 0 album(s)</string>
    <string name="default_album_name">Album name</string>
    <string name="default_album_details_description">Number of songs: 0</string>
    <string name="play_all_songs_from_this_album">Play all songs from this album</string>
    <string name="album_details_artwork" translatable="false">Album details artwork</string>
    <string name="album_details_s_small_artwork" translatable="false">Album details small artwork</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="albums" translatable="false">Albums</string>
    <string name="read_external_storage_permission_denied_notice_title">Cannot read media files</string>
    <string name="read_external_storage_permission_denied_notice_message">This app cannot read media files on your device because the permission has been denied.</string>
    <string name="image_for_thumbnail" translatable="false">Image for thumbnail</string>
    <string name="navigate_next" translatable="false">Navigate next</string>
    <string name="new_playlist">Create Playlist</string>
    <string name="add_more">Add more</string>
    <string name="play_all">Play All</string>
    <string name="shuffle_all">Shuffle All</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="play_next">Play next</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="enter_playlist_name">Enter playlist name</string>
    <string name="create">Create</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="new_playlist_name">New playlist name</string>
    <string name="delete_playlist_from_device">Delete playlist from device?</string>
    <string name="message_delete">This will be deleted permanently from this device.</string>
    <string name="remove">Remove</string>
    <string name="properties" translatable="false">Properties</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="file_size">File size</string>
    <string name="duration">Duration</string>
    <string name="file_name">File name:</string>
    <string name="sort">Sort by name</string>
    <string name="add_to_watch_later">Watch later</string>
    <string name="go_to_queue_list">Go to watch later</string>
    <string name="clear_queue_list">Clear watch later</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="queue">Queue</string>
    <string name="save_to_playlist">Save to playlist</string>
    <string name="clear">Clear</string>
    <string name="my_favourites">My favourites</string>
    <string name="watch_later">Watch later</string>
    <string name="sort_by_length">Length</string>
    <string name="sort_by_name">Name</string>
    <string name="description_options_icon" translatable="false">A gray options icon</string>
    <string name="item_list_grid_change">Change to list/grid</string>
    <string name="video_duration_placeholder" translatable="false">-01:00</string>
    <string name="video_name_placeholder" translatable="false">VIDEO.MP4</string>
    <string name="description_play_arrow_icon" translatable="false">A white play arrow icon</string>
    <string name="all_videos_textView">All videos</string>
    <string name="dialog_bottom_video_name">VIDEO NAME</string>
    <string name="bottom_dialog_option_info">Information</string>
    <string name="dialog_bottom_option_playlist">Add to playlist</string>
    <string name="dialog_bottom_option_rename">Rename</string>
    <string name="dialog_bottom_option_delete">Delete</string>
    <string name="dialog_bottom_option_share">Share</string>
    <string name="dialog_bottom_option_information_ic">Bottom dialog option - Information</string>
    <string name="dialog_bottom_option_playlist_ic">Bottom dialog option - Add to playlist</string>
    <string name="dialog_bottom_option_rename_ic">Bottom dialog option - Rename</string>
    <string name="dialog_bottom_option_share_ic">Bottom dialog option - Share</string>
    <string name="dialog_bottom_option_delete_ic">Bottom dialog option - Delete</string>
    <string name="item_search">Search</string>
    <string name="dialog_video_info_name_textview">VIDEO NAME</string>
    <string name="dialog_video_info_path_textview">File path:</string>
    <string name="dialog_video_info_size_textview">File size:</string>
    <string name="dialog_video_info_date_textview">Date taken:</string>
    <string name="dialog_video_info_resolution_textview">Resolution:</string>
    <string name="dialog_video_info_length_textview">Length:</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="sort_by">Sort by</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="title">Title</string>
    <string name="time_added">Time added</string>
    <string name="name">Name</string>
    <string name="number_of_albums">Number of albums</string>
    <string name="number_of_songs">Number of songs</string>
    <string name="release_year">Release year</string>
    <string name="video_queue">Video</string>
    <string name="music_queue">Song</string>
    <string name="my_favourite">My Favourite</string>
    <string name="numbers_of_item">Numbers of item</string>
    <string name="title_overview">Overview</string>
    <string name="recent_videos_textview">Recent videos</string>
    <string name="most_watched_videos_textview">Most watched videos</string>
    <string name="recent_songs_textview">Recent songs</string>
    <string name="most_listened_songs_textview">Most listened songs</string>
    <string name="song_name_placeholder" translatable="false">SONG.MP3</string>
    <string name="unknown_artist_textview" translatable="false">Unknown</string>
    <string name="artist_name">Artist:</string>
    <string name="album_name" translatable="false">Album:</string>
    <string name="genre">Genre:</string>
    <string name="duration2">Duration:</string>
    <string name="time_added2">Time added:</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="choose_language">Choose Language</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="more">More</string>
    <string name="item_count">Item count</string>
    <string name="playlist_name">Playlist name</string>
    <string name="video_count_postfix">video(s)</string>
    <string name="song_count_postfix">song(s)</string>
    <string name="cancel">Cancel</string>
    <string name="video">Video</string>
    <string name="music">Music</string>
    <string name="name_is_empty">Name is empty!</string>
    <string name="play">Play</string>
    <string name="added_to_watch_later">Added to watch later</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="no_playlist_item_to_play">There is nothing to play! Please add a few items</string>
    <string name="general">General</string>
    <string name="resume_last_position">Resume last position</string>
    <string name="display_music_visualizer">Display music visualizer</string>
    <string name="default_number" translatable="false">0</string>
    <string name="album_count_postfix">album(s)</string>
    <string name="total_duration">total duration</string>
    <string name="released_in">released in</string>
    <string name="default_year" translatable="false">2021</string>
    <string name="n_a" translatable="false">N/A</string>
    <string name="choose_a_playlist">Choose a playlist</string>
    <string name="added_to_playlist">Added to playlist</string>
    <string name="item_already_added">Item already added</string>
    <string name="you_are_not_playing_from_a_playlist">You are not playing from a playlist</string>
    <string name="clear_history">Clear history</string>
    <string name="resume_last_playback_position">Resume last playback position?</string>
    <string name="yes">Yes</string>
    <string name="delete_all">Delete all</string>
    <string name="added_to_listen_later">Added to listen later</string>
</resources>