<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_playlist_detail"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:title="@string/show_as"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_show_as_list_playlist_detail"
                android:title="@string/list"
                android:icon="@drawable/ic_list_24dp"
                app:iconTint="@color/cyan" />

            <item
                android:id="@+id/action_show_as_grid_playlist_detail"
                android:title="@string/grid"
                android:icon="@drawable/ic_grid_24dp"
                app:iconTint="@color/cyan" />
        </menu>
    </item>

    <item
        android:title="@string/sort_by"
        app:showAsAction="never">
        <menu>
            <item android:title="@string/title"
                android:icon="@drawable/ic_sort_by_alphabet_24dp"
                app:iconTint="@color/cyan">
                <menu>
                    <item
                        android:id="@+id/action_sort_by_title_asc_playlist_detail"
                        android:title="@string/ascending" />

                    <item
                        android:id="@+id/action_sort_by_title_desc_playlist_detail"
                        android:title="@string/descending" />
                </menu>
            </item>

            <item android:title="@string/duration"
                android:icon="@drawable/ic_watch_later_24dp"
                app:iconTint="@color/cyan">
                <menu>
                    <item
                        android:id="@+id/action_sort_by_duration_asc_playlist_detail"
                        android:title="@string/ascending" />

                    <item
                        android:id="@+id/action_sort_by_duration_desc_playlist_detail"
                        android:title="@string/descending" />
                </menu>
            </item>
        </menu>
    </item>
</menu>