<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="general_category"
        android:title="@string/general">

        <ListPreference
            android:title="@string/change_language"
            android:key="language"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="playback_category"
        android:title="@string/playback">

        <SwitchPreference
            android:title="@string/resume_last_position"
            android:key="resume_last_position"
            android:defaultValue="true" />

        <SwitchPreference
            android:title="@string/display_music_visualizer"
            android:key="display_music_visualizer"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>