<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/show_as"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_show_as_list_queue"
                android:title="@string/list"
                android:icon="@drawable/ic_list_24dp"
                app:iconTint="@color/cyan" />

            <item
                android:id="@+id/action_show_as_grid_queue"
                android:title="@string/grid"
                android:icon="@drawable/ic_grid_24dp"
                app:iconTint="@color/cyan" />
        </menu>
    </item>

    <item
        android:id="@+id/action_play_all_queue"
        android:title="@string/play_all"
        app:showAsAction="ifRoom|collapseActionView"
        android:iconTint="@color/black"
        android:icon="@drawable/ic_play_circle_outline_24dp"
        />
    <item
        android:id="@+id/action_delete_all_queue"
        android:title="@string/delete_all" />
</menu>