<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/change_display_mode"
        android:title="@string/show_as"
        app:iconTint="@color/cyan"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/show_as_list"
                android:title="@string/list"
                android:icon="@drawable/ic_list_24dp"
                app:iconTint="@color/cyan" />

            <item
                android:id="@+id/show_as_grid"
                android:title="@string/grid"
                android:icon="@drawable/ic_grid_24dp"
                app:iconTint="@color/cyan" />
        </menu>
    </item>
    <item
        android:id="@+id/change_sort_mode"
        android:title="Sort"
        app:iconTint="@color/cyan"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/sort_by_title_ASC"
                android:title="Sort by name (A-Z)"
                app:iconTint="@color/cyan" />

            <item
                android:id="@+id/sort_by_title_DESC"
                android:title="Sort by name (Z-A)"
                app:iconTint="@color/cyan" />
        </menu>
    </item>
</menu>